.metadata/.plugins/org.eclipse.cdt.ui/prueba_updateGPIO.build.log
11:55:08 **** Incremental Build of configuration Debug for project prueba_updateGPIO ****
make clean all 
rm -rf ./Startup/startup_stm32f411retx.d ./Startup/startup_stm32f411retx.o
rm -rf ./Src/main.d ./Src/main.o ./Src/main.su ./Src/syscalls.d ./Src/syscalls.o ./Src/syscalls.su ./Src/sysmem.d ./Src/sysmem.o ./Src/sysmem.su
rm -rf ./Drivers/Src/BasicTimer.d ./Drivers/Src/BasicTimer.o ./Drivers/Src/BasicTimer.su ./Drivers/Src/GPIOxDriver.d ./Drivers/Src/GPIOxDriver.o ./Drivers/Src/GPIOxDriver.su
rm -rf default.size.stdout prueba_updateGPIO.elf prueba_updateGPIO.list prueba_updateGPIO.map
 
arm-none-eabi-gcc -mcpu=cortex-m4 -g3 -DDEBUG -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f411retx.d" -MT"Startup/startup_stm32f411retx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f411retx.o" "../Startup/startup_stm32f411retx.s"
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/updateGPIO/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc "../Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/updateGPIO/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc "../Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/updateGPIO/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
arm-none-eabi-gcc "../Drivers/Src/BasicTimer.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F411RE -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/mcu_headers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/santiago/Documentos/GitHub/TallerV_01_2023/updateGPIO/Drivers/Inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Drivers/Src/BasicTimer.d" -MT"Drivers/Src/BasicTimer.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Drivers/Src/BasicTimer.o"
../Drivers/Src/BasicTimer.c:10:1: error: unknown type name 'TIM_TypeDef'
   10 | TIM_TypeDef *ptrTimerUsed;
      | ^~~~~~~~~~~
../Drivers/Src/BasicTimer.c:31:10: warning: missing terminating " character
   31 | #include "BasicTimer.h
      |          ^
../Drivers/Src/BasicTimer.c:31:10: error: #include expects "FILENAME" or <FILENAME>
   31 | #include "BasicTimer.h
      |          ^~~~~~~~~~~~~
../Drivers/Src/BasicTimer.c:34:24: error: unknown type name 'BasicTimer_Handler_t'
   34 | void BasicTimer_Config(BasicTimer_Handler_t *ptrBTimerHandler){
      |                        ^~~~~~~~~~~~~~~~~~~~
../Drivers/Src/BasicTimer.c: In function 'BasicTimer2_Callback':
../Drivers/Src/BasicTimer.c:115:2: warning: implicit declaration of function '__NOP' [-Wimplicit-function-declaration]
  115 |  __NOP();
      |  ^~~~~
../Drivers/Src/BasicTimer.c: In function 'TIM2_IRQHandler':
../Drivers/Src/BasicTimer.c:125:14: error: request for member 'SR' in something not a structure or union
  125 |  ptrTimerUsed->SR &= ~TIM_SR_UIF;
      |              ^~
../Drivers/Src/BasicTimer.c:125:23: error: 'TIM_SR_UIF' undeclared (first use in this function)
  125 |  ptrTimerUsed->SR &= ~TIM_SR_UIF;
      |                       ^~~~~~~~~~
../Drivers/Src/BasicTimer.c:125:23: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Drivers/Src/subdir.mk:22: Drivers/Src/BasicTimer.o] Error 1
"make clean all" terminated with exit code 2. Build might be incomplete.

11:55:08 Build Failed. 6 errors, 2 warnings. (took 317ms)

